metadata/sf-prod/force-app/main/default/objects/NetsuiteKeys__c/NetsuiteKeys__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>NetsuiteKeys</label>
</CustomObject>