metadata/sf-prod/force-app/main/default/objects/NetsuiteKeys__c/fields/ConsumerKey__c.field-meta.xml
<CustomField>
    <fullName>ConsumerKey__c</fullName>
    <label>ConsumerKey</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>