metadata/sf-prod/force-app/main/default/objects/NetsuiteKeys__c/fields/ConsumerSecret__c.field-meta.xml
<CustomField>
    <fullName>ConsumerSecret__c</fullName>
    <label>ConsumerSecret</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>