metadata/sf-prod/force-app/main/default/objects/NetsuiteKeys__c/fields/TokenKey__c.field-meta.xml
<CustomField>
    <fullName>TokenKey__c</fullName>
    <label>TokenKey</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>