metadata/sf-prod/force-app/main/default/objects/NetsuiteKeys__c/fields/TokenSecret__c.field-meta.xml
<CustomField>
    <fullName>TokenSecret__c</fullName>
    <label>TokenSecret</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>